--- a/css/flexbox_index.css
+++ b/css/flexbox_index.css
@@ -22,6 +22,7 @@
 .header-nav {
 }
 .header-nav-list {
+  /*ВСЕ С ПОМЕТКОЙ LIST нужно сбрасывать Padding и Margin, это дизайн HTML*/
   padding: 0;
   margin: 0;
 }
