--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ body {
 }
 .section-specials-item-description {
   font-size: 14px;
+  line-height: 24px;
 }
 
 /*--------------------------------------------1стр ЧЕМ МЫ ЗАНИМАЕМЯ TASKS--------------------------------------------*/
