--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,31 @@ body {
   --text-title-color: #212121;
   /*--text-descriptiom-color: #757575; - уже есть в body*/
 }
+/*--------------------------------------------УТИЛИТЫ--------------------------------------------*/
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  /*outline: 2px solid tomato;*/
+  margin: 0 auto;
+}
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  /*outline: 2px solid blue;*/
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
 /*---------------------------------------------HEADER--------------------------------------------*/
 .header {
   background-color: var(--background-header);
+  border-bottom: 1px solid #ececec;
 }
+
 /*--------ЛОГО--------*/
 .header-logo {
   font-family: 'Raleway';
@@ -59,6 +79,9 @@ body {
   line-height: 31px;
   text-decoration: none;
   color: var(--logo-dark);
+
+  display: block;
+  margin-right: 93px;
 }
 
 .header-logo-accent {
@@ -67,19 +90,36 @@ body {
 
 /*--------НАВИГАЦИЯ--------*/
 
-/*.header-nav {} - Потушено*/
+.header-nav {
+  justify-content: flex-start;
+  margin-right: auto;
+}
 
 .header-nav-list {
   list-style: none;
+
+  display: flex;
+  /*ВСЕ С ПОМЕТКОЙ LIST нужно сбрасывать Padding и Margin, это дизайн HTML для списков*/
+  padding: 0;
+  margin: 0;
 }
 
-/*.header-nav-item {}- Потушено*/
+.header-nav-item {
+  margin-right: 50px;
+}
+.header-nav-item:last-child {
+  margin-right: 0px;
+}
 
 .header-nav-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
   text-decoration: none;
+
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   color: var(--link-color);
 }
@@ -96,9 +136,18 @@ body {
 
 .header-contacts-list {
   list-style: none;
+
+  display: flex;
+  padding: 0;
+  margin: 0;
 }
 
-/*.header-contacts-item {} - Потушено*/
+.header-contacts-item {
+  margin-right: 50px;
+}
+.header-contacts-item:last-child {
+  margin-right: 0px;
+}
 
 .header-contacts-link {
   font-weight: 500;
@@ -106,6 +155,10 @@ body {
   line-height: 16px;
   text-decoration: none;
   color: inherit;
+
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .header-contacts-link:hover,
@@ -116,6 +169,8 @@ body {
 /*--------------------------------------------FOOTER--------------------------------------------*/
 .footer {
   background-color: var(--background-footer);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer-logo {
@@ -134,10 +189,14 @@ body {
 
 .footer-address {
   font-style: normal;
+  margin-top: 20px;
 }
 
 .footer-address-list {
   list-style: none;
+
+  padding: 0;
+  margin: 0;
 }
 
 .footer-address-item_location {
@@ -145,9 +204,14 @@ body {
   line-height: 24px;
   color: #ffffff;
   text-decoration: none;
+
+  margin-top: 9px;
+  margin-bottom: 9px;
 }
 
-/*.footer-address-item {} - Потушено*/
+.footer-address-item {
+  margin-top: 9px;
+}
 
 .footer-address-link {
   font-size: 14px;
@@ -164,6 +228,7 @@ body {
 /*--------------------------------------------1стр HERO--------------------------------------------*/
 .section-hero {
   background-color: var(--background-hero);
+  text-align: center;
 }
 .section-hero-title {
   font-weight: 900;
@@ -171,25 +236,50 @@ body {
   line-height: 60px;
   text-transform: uppercase;
   color: var(--hero-title-color);
+
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .section-hero-button {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
+
   color: var(--button-order-color);
   background-color: var(--button-background-order);
+
   cursor: pointer;
+
+  margin-top: 30px;
+  display: inline-block; /*для кнопок баттон и ссылок-кнопок - обязательно*/
+  min-width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  padding: 10px 32px;
+  border-width: 0px;
+  border-style: none;
+  text-align: center;
 }
 
 /*--------------------------------------------1стр ОСОБЕННОСТИ SPECIALS--------------------------------------------*/
 
-/*.section-specials {}- Потушено*/
-
 .section-specials-list {
   list-style: none;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  padding: 0;
+  margin: 0;
 }
-/*.section-specials-item {} - Потушено*/
+.section-specials-item {
+  width: 270px;
+  min-height: 75px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
 .section-specials-item-title {
   font-weight: 700;
@@ -197,44 +287,86 @@ body {
   line-height: 16px;
   text-transform: uppercase;
   color: var(--text-title-color);
+
+  margin: 0;
+  padding: 0;
 }
 .section-specials-item-description {
   font-size: 14px;
   line-height: 24px;
+
+  margin-top: 10px;
+  margin-bottom: 0;
+  padding: 0;
 }
 
 /*--------------------------------------------1стр ЧЕМ МЫ ЗАНИМАЕМЯ TASKS--------------------------------------------*/
 
-/*.section-tasks {}- Потушено*/
+.section-tasks {
+  text-align: center;
+}
 
 .section-tasks-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 42px;
   color: var(--text-title-color);
+
+  margin: 0;
+  padding: 0;
 }
 .section-tasks-list {
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+
+  margin-top: 50px;
+  margin-bottom: 0;
+  padding: 0;
 }
-/*.section-tasks-item {}- Потушено*/
-/*.section-tasks-item-img {}- Потушено*/
+
+.section-tasks-item-img {
+  display: block;
+}
 
 /*--------------------------------------------1стр НАША КОМАНДА TEAM--------------------------------------------*/
 
-/*.section-team {}- Потушено*/
+.section-team {
+  text-align: center;
+  background: var(--background-team);
+}
 
 .section-team-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 42px;
   color: var(--text-title-color);
+
+  margin: 0;
+  padding: 0;
 }
 
 .section-team-list {
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  padding: 0;
+
+  margin-top: 50px;
+  margin-bottom: 0;
 }
 .section-team-item {
   background: #ffffff;
+
+  display: block;
+  padding-bottom: 30px;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 /*.section-team-item-img {} - Потушено*/
@@ -244,19 +376,37 @@ body {
   font-size: 16px;
   line-height: 19px;
   color: var(--text-title-color);
+
+  margin-top: 30px;
+  margin-bottom: 0;
+  padding: 0;
 }
 
 .section-team-description {
   line-height: 19px;
+
+  margin-top: 10px;
+  margin-bottom: 0;
+  padding: 0;
 }
 
 /*--------------------------------------------2стр ФИЛЬТРЫ FILTERS---------------------------------------------*/
 
-/*.section-filters {} - Потушено*/
+.section-filters-portfolio-list {
+  list-style: none;
+  padding-inline-start: 0px;
+}
+
 .section-filters-btn-list {
   list-style: none;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;
+  padding: 0;
+  margin: 0;
 }
-/*.section-filters-btn-list-item {}- Потушено*/
 
 .section-filters-btn-list-btn {
   font-family: inherit;
@@ -266,6 +416,13 @@ body {
   color: var(--button-filter-color);
   background-color: var(--button-background-filter);
   cursor: pointer;
+
+  display: inline-block; /*для кнопок баттон и ссылок-кнопок - обязательно*/
+  border-radius: 4px;
+  padding: 6px 22px;
+  border-width: 0px;
+  border-style: none;
+  text-align: center;
 }
 
 .section-filters-btn-list-btn:hover,
@@ -276,22 +433,50 @@ body {
 
 /*--------------------------------------------2стр ПОРТФОЛИО PORTFOLIO--------------------------------------------*/
 
-/*.section-portfolio {}- Потушено*/
+.section-portfolio {
+  text-align: center;
+  margin-top: 50px;
+}
 
 .section-portfolio-list {
   list-style: none;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 .section-portfolio-item {
   background-color: #ffffff;
+  padding-bottom: 20px;
+  border: 1px solid #eeeeee;
+  width: 370px;
+
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
-/*.section-portfolio-item-img {}- Потушено*/
+.section-portfolio-item:nth-child(3n) {
+  margin-right: 0px;
+}
+.section-portfolio-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
 
 .section-portfolio-item-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 36px;
   color: #212121;
+
+  margin-top: 20px;
+  margin-bottom: 0;
+  padding: 0;
 }
 .section-portfolio-item-description {
   line-height: 30px;
+
+  margin-top: 4px;
+  margin-bottom: 0;
+  padding: 0;
 }
