--- a/css/style.css
+++ b/css/style.css
@@ -205,11 +205,12 @@ body {
   color: #ffffff;
   text-decoration: none;
 
-  margin-top: 9px;
   margin-bottom: 9px;
 }
 
-.footer-address-item {
+.footer-address-item-email {
+}
+.footer-address-item-phone {
   margin-top: 9px;
 }
 
@@ -229,6 +230,8 @@ body {
 .section-hero {
   background-color: var(--background-hero);
   text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .section-hero-title {
   font-weight: 900;
@@ -236,6 +239,9 @@ body {
   line-height: 60px;
   text-transform: uppercase;
   color: var(--hero-title-color);
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
 
   margin-top: 0;
   margin-bottom: 0;
@@ -276,9 +282,6 @@ body {
 }
 .section-specials-item {
   width: 270px;
-  min-height: 75px;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .section-specials-item-title {
@@ -304,6 +307,7 @@ body {
 
 .section-tasks {
   text-align: center;
+  padding-top: 0px;
 }
 
 .section-tasks-title {
@@ -363,7 +367,7 @@ body {
   background: #ffffff;
 
   display: block;
-  padding-bottom: 30px;
+
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -371,13 +375,17 @@ body {
 
 /*.section-team-item-img {} - Потушено*/
 
+.collegues {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
 .section-team-name {
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   color: var(--text-title-color);
 
-  margin-top: 30px;
   margin-bottom: 0;
   padding: 0;
 }
@@ -392,10 +400,10 @@ body {
 
 /*--------------------------------------------2стр ФИЛЬТРЫ FILTERS---------------------------------------------*/
 
-.section-filters-portfolio-list {
+/*.section-filters-portfolio-list {
   list-style: none;
   padding-inline-start: 0px;
-}
+}*/
 
 .section-filters-btn-list {
   list-style: none;
@@ -416,6 +424,8 @@ body {
   color: var(--button-filter-color);
   background-color: var(--button-background-filter);
   cursor: pointer;
+
+  list-style: none;
 
   display: inline-block; /*для кнопок баттон и ссылок-кнопок - обязательно*/
   border-radius: 4px;
@@ -445,15 +455,13 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   padding: 0;
-  margin: 0;
+  margin-top: 50px;
 }
 .section-portfolio-item {
   background-color: #ffffff;
-  padding-bottom: 20px;
-  border: 1px solid #eeeeee;
+
   width: 370px;
 
-  margin-right: 30px;
   margin-bottom: 30px;
 }
 .section-portfolio-item:nth-child(3n) {
@@ -462,21 +470,29 @@ body {
 .section-portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
-
+.section-portfolio-item-img {
+  display: block;
+}
+.card {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 .section-portfolio-item-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 36px;
   color: #212121;
 
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 0;
-  padding: 0;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 .section-portfolio-item-description {
   line-height: 30px;
 
   margin-top: 4px;
   margin-bottom: 0;
-  padding: 0;
+  padding-left: 24px;
+  padding-right: 24px;
 }
