--- a/css/style.css
+++ b/css/style.css
@@ -461,7 +461,7 @@ body {
   background-color: #ffffff;
 
   width: 370px;
-
+  margin-right: 30px;
   margin-bottom: 30px;
 }
 .section-portfolio-item:nth-child(3n) {
