--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,8 @@ body {
   text-decoration: none;
 
   margin-bottom: 9px;
+  margin-top: 0;
+}
 }
 
 .footer-address-item-email {
@@ -376,8 +378,8 @@ body {
 /*.section-team-item-img {} - Потушено*/
 
 .collegues {
-  margin-top: 32px;
-  margin-bottom: 32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .section-team-name {
@@ -387,6 +389,7 @@ body {
   color: var(--text-title-color);
 
   margin-bottom: 0;
+  margin-top: 0;
   padding: 0;
 }
 
@@ -460,6 +463,7 @@ body {
 .section-portfolio-item {
   background-color: #ffffff;
 
+
   width: 370px;
   margin-right: 30px; /*отступы справа*/
   margin-bottom: 30px; /*отступы слева*/
@@ -474,8 +478,11 @@ body {
   display: block;
 }
 .card {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  padding: 20px 24px;
+  border-left: 1px solid #EEEEEE;
+  border-bottom: 1px solid #EEEEEE;
+  border-right: 1px solid #EEEEEE;
+  
 }
 .section-portfolio-item-title {
   font-weight: 700;
@@ -485,14 +492,12 @@ body {
 
   margin-top: 0px;
   margin-bottom: 0;
-  padding-left: 24px;
-  padding-right: 24px;
+  
 }
 .section-portfolio-item-description {
   line-height: 30px;
 
   margin-top: 4px;
   margin-bottom: 0;
-  padding-left: 24px;
-  padding-right: 24px;
+
 }
