--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   padding: 0;
+  margin: 0;
   margin-top: 50px;
 }
 .section-portfolio-item {
